# ran

./: .gitignore  ARCHITECTURE.md  BUILD_FEATURES.md  CHANGELOG.md  Cargo.toml  LICENSE  README.md  TODO.md  build.rs
bootstrap/: README.md  checker.ran  lexer.ran  parser.ran
docs/: 00-introduction.md  01-getting-started.md  02-variables-types.md  03-functions.md  04-control-flow.md  05-ownership.md  06-concurrency.md  07-networking.md  08-hardware.md  09-compilation.md  10-stdlib.md  11-syntax-reference.md  12-error-handling.md  13-modules-imports.md  14-security.md  15-cli-reference.md  16-roadmap.md  17-building-websites.md  18-interop-and-ecosystem.md  19-why-ran.md  20-changelog.md  21-dependency-policy.md  22-ecosystem-and-packages.md  23-runtime-audit.md  24-realtime-crud-tutorial.md  25-language-spec.md
docs/stdlib/: README.md  bank-and-ecommerce.md  builtins.md  concurrency.md  crypto.md  database.md  decimal.md  enterprise.md  env.md  errors.md  fs.md  html.md  http.md  json.md  log.md  math.md  oop.md  os.md  rand.md  str.md  time.md  web.md
examples/: banking.ran  comments.ran  concurrency.ran  control_flow.ran  database.ran  ecommerce.ran  functions.ran  hardware.ran  hello.ran  ownership.ran  showcase.ran  stdlib_tour.ran  structs.ran  variables.ran  webserver.ran
examples/blog/: README.md  app.ran  content.ran  routes.ran  util.ran  views.ran
examples/crud/: app.ran
examples/modules/: app.ran  mathlib.ran
examples/web/: server.ran
examples/webapp/: app.ran
src/: main.rs
src/backend/: mod.rs  (+2 more)
tests/: db_golden.rs  fault_boundaries.rs  integration.rs  memory_guard.rs  ownership_golden.rs
(+64 files in other folders)
