[package]
name = "ran"
version = "0.3.8"
edition = "2021"
authors = ["Ran Contributors"]
description = "Ran Programming Language - a self-hosted language for internal systems and business tooling"
license = "MIT"
repository = "https://github.com/ranlang-org/ran"

[[bin]]
name = "ran"
path = "src/main.rs"

[dependencies]

[profile.release]
# Optimize the `ran` binary (and the interpreter/VM embedded in standalone
# builds) for SPEED, not size. A language runtime is execution-bound, so
# opt-level 3 (aggressive inlining/vectorization) is worth the larger binary;
# the user explicitly wants the interpreter to feel fast, close to native.
opt-level = 3
lto = true
strip = true
# `unwind` (not `abort`) so the HTTP server can catch a faulting request handler
# and return 500 instead of the whole process dying. See src/runtime (RuntimeFault).
panic = "unwind"
codegen-units = 1
overflow-checks = false
